[gd_scene load_steps=7 format=3 uid="uid://h785clbmi3ek"]

[ext_resource type="Texture2D" uid="uid://br2hfajowkx6b" path="res://Chacters/char_04.png" id="1_67u1k"]
[ext_resource type="Script" path="res://player.gd" id="1_ujji5"]
[ext_resource type="PackedScene" uid="uid://bb10yrrxefow8" path="res://Utils/hurt_box.tscn" id="3_qcfsk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ame6"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p03r4"]
size = Vector2(31, 40.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_dkgff"]
radius = 667.468

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["Player"]]
motion_mode = 1
script = ExtResource("1_ujji5")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
visibility_layer = 3
scale = Vector2(2.8125, 2.8125)
texture = ExtResource("1_67u1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_5ame6")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="HurtBox" parent="CharacterBody2D" instance=ExtResource("3_qcfsk")]
position = Vector2(0, -4)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="CharacterBody2D/HurtBox" index="0"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_p03r4")

[node name="Attack" type="Node2D" parent="CharacterBody2D"]

[node name="SpearTimer" type="Timer" parent="CharacterBody2D/Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="SpearAttackTimer" type="Timer" parent="CharacterBody2D/Attack/SpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/EnemyDetectionArea"]
shape = SubResource("CircleShape2D_dkgff")

[connection signal="hurt" from="CharacterBody2D/HurtBox" to="CharacterBody2D" method="_on_hurt_box_hurt"]
[connection signal="timeout" from="CharacterBody2D/Attack/SpearTimer" to="CharacterBody2D" method="_on_spear_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/Attack/SpearTimer/SpearAttackTimer" to="CharacterBody2D" method="_on_spear_attack_timer_timeout"]
[connection signal="body_entered" from="CharacterBody2D/EnemyDetectionArea" to="CharacterBody2D" method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/EnemyDetectionArea" to="CharacterBody2D" method="_on_enemy_detection_area_body_exited"]

[editable path="CharacterBody2D/HurtBox"]
